--- a/index.html
+++ b/index.html
@@ -14,14 +14,23 @@
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  
+
   <style>
+    .testing {
+      height: 80px;
+      width: 80px;
+      background-color: thistle;
+
+    }
+
+
     .main-title {
       font-family: Inter;
       font-weight: bold;
       font-size: 36px;
       color: white;
     }
+
 
     .purpol {
       color: #AB5CDB;
@@ -59,20 +68,51 @@
     .bg-purpul {
       background-color: #1B1937;
     }
+    .bg{
+      background-color: #0A0C1C;
+    }
+.center-abso{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
 
-    .round-right {
-      border-radius: 9px 0px 0px 9px;
+    @media (min-width: 0px) {
+      .round-content {
+        border-radius: 0px 0px 9px 9px;
+      }
+
+      .round-pic {
+        border-radius: 9px 9px 0px 0px;
+      }
     }
 
-    .round-left {
-      border-radius: 0px 9px 9px 0px;
+    @media (min-width: 576px) {
+     
     }
+
+    @media (min-width: 768px) {
+      .round-content {
+        border-radius: 9px 0px 0px 9px;
+      }
+
+      .round-pic {
+        border-radius: 0px 9px 9px 0px;
+      }
+    }
+
+    @media (min-width: 1200px) {}
   </style>
 </head>
 
-<body>
-  <div class="row p-0 m-0">
-    <div class="col-12 col-md-6 p-0 m-0 bg-purpul round-right">
+<body class="bg">
+  <div class="container center-abso">
+
+ 
+  <div class="row px-3 m-0">
+    <div class="col-12 col-md-6 p-0 m-0 bg-purpul round-content">
       <div class="p-5">
         <div class="col-12 m-0 p-0">
           <h3 class="main-title">
@@ -86,38 +126,39 @@
           </p>
         </div>
         <div class="row m-0 p-0 pt-5">
-          <div class="col-4 m-0 p-0">
-            <h3 class="sub-title">
+          <div class="col-12 col-md-4 m-0 p-0">
+            <h3 class="sub-title text-center">
               10k+
             </h3>
-            <p class="small-text">
+            <p class="small-text text-center ">
               COMPANIES
             </p>
           </div>
-          <div class="col-4 m-0 p-0">
-            <h3 class="sub-title">
+          <div class="col-12 col-md-4 m-0 p-0">
+            <h3 class="sub-title text-center">
               314
             </h3>
-            <p class="small-text">
+            <p class="small-text text-center">
               TEMPLATES
             </p>
           </div>
-          <div class="col-4 m-0 p-0">
-            <h3 class="sub-title">
+          <div class="col-12 col-md-4 m-0 p-0">
+            <h3 class="sub-title text-center">
               12M+
             </h3>
-            <p class="small-text">
+            <p class="small-text text-center">
               QUERIES
             </p>
           </div>
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-6 p-0 m-0 photo-bg round-left order-first order-md-last">
-      <img src="/images/image-header-desktop.jpg" class="w-100 h-100" alt="">
+    
+    <div class="col-12 col-md-6 p-0 m-0 photo-bg round-pic order-first order-md-last">
+      <img src="/images/image-header-desktop.jpg" class="w-100 h-100 d-block d-md-none round-pic" alt="">
     </div>
   </div>
-
+</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
